--- a/index.qmd
+++ b/index.qmd
@@ -37,16 +37,10 @@ This seminar is designed as a collaborative, research-driven experience that mir
 
 ## **About the Dataset**
 
-Ohio is a water-rich state, bounded on the south by the Ohio River and the north by Lake Erie. These water bodies, as well as thousands of miles of inland streams and rivers and thousands of acres of lakes and wetlands, contribute to the quality of life of Ohio's citizens. Ohio EPA's Division of Surface Water supports a diverse set of programs that monitor inland lake, Lake Erie, primary headwater streams, and wetlands, in addition to its comprehensive watershed studies.
+Ohio is defined by its abundant water resources, bordered by the Ohio River to the south and Lake Erie to the north. Together with thousands of miles of streams and rivers and extensive lakes and wetlands, these waters play a central role in supporting ecosystems, communities, and quality of life across the state. The Ohio Environmental Protection Agency’s Division of Surface Water oversees a wide range of monitoring and assessment programs spanning inland lakes, Lake Erie, headwater streams, rivers, and wetlands, as well as comprehensive watershed studies.
 
-Each year, Ohio EPA collects data from 400 to 450 stream and river sites around the state to support watershed assessment. During these studies, Ohio EPA scientists collect chemical samples, examine and count fish and aquatic insects, and take measurements of the stream. There are three major objectives for the studies:
+Each year, Ohio EPA scientists survey approximately 400–450 stream and river sites statewide as part of these watershed assessments. Field crews collect chemical water samples, evaluate fish and aquatic macroinvertebrate communities, and measure physical characteristics of streams to assess overall condition. These efforts are guided by three primary goals: evaluating whether streams meet expectations outlined in [Ohio’s Water Quality Standards](https://epa.ohio.gov/divisions-and-offices/surface-water/regulations/effective-rules/effective-rules), determining whether those expectations are appropriate and achievable, and identifying changes in stream condition since previous assessments.
 
--   To determine how the stream is doing compared to goals assigned in the [Ohio Water Quality Standards (WQS)](https://epa.ohio.gov/divisions-and-offices/surface-water/regulations/effective-rules/effective-rules)
+Data from field surveys are analyzed and synthesized into [biological and water quality reports](https://epa.ohio.gov/divisions-and-offices/surface-water/reports-data/biological-and-water-quality-reports), which inform both scientific understanding and management decisions. See Final 2024 integrated report [here](https://dam.assets.ohio.gov/image/upload/epa.ohio.gov/Portals/35/tmdl/2024intreport/Full-2024-IR.pdf). Collectively, these assessments also underpin Ohio’s identification of impaired and threatened waters under [Section 303(d) of the Clean Water Act](https://www.eli.org/sites/default/files/files-pdf/2025%20Introduction%20to%20the%20Clean%20Water%20Act%20Section%20303%28d%29%20Program.pdf).
 
--   To determine if the goals assigned to the river or stream are appropriate and attainable
-
--   To determine if the streams condition has changed since the last time the stream was studied.
-
-The data gathered by a field survey is processed, evaluated and synthesized in a [biological and water quality report](https://epa.ohio.gov/divisions-and-offices/surface-water/reports-data/biological-and-water-quality-reports) - see Final 2024 integrated report [here](https://dam.assets.ohio.gov/image/upload/epa.ohio.gov/Portals/35/tmdl/2024intreport/Full-2024-IR.pdf). The findings and conclusions of each biological and water quality study may factor into regulatory actions taken by Ohio EPA and are incorporated into Water Quality Permit Support Documents (WQPSDs), [total maximum daily loads (TMDLs)](https://epa.ohio.gov/divisions-and-offices/surface-water/reports-data/total-maximum-daily-load-tmdl-program), State Water Quality Management Plans, the Ohio Nonpoint Source Assessment and the Ohio Water Resource Inventory (305\[b\] report). This information also provides the basis for the list of impaired and threatened waters required by Section 303(d) of the Clean Water Act.
-
-**Text Credit:** [Ohio Environmental Protection Agency](https://epa.ohio.gov/home)
+Text adapted from materials produced by the [Ohio Environmental Protection Agency](https://epa.ohio.gov/home). 
