last of seth papers added

--- a/literature.qmd
+++ b/literature.qmd
@@ -66,3 +66,7 @@ Baldigo, Barry P., Scott D. George, and Gregory B. Lawrence. 2025. [“Fish-Asse
 Norton, Susan B., Susan M. Cormier, Marc Smith, and R. Christian Jones. 2000. [“Can Biological Assessments Discriminate among Types of Stress? A Case Study from the Eastern Corn Belt Plains Ecoregion.”](https://academic.oup.com/etc/article/19/4/1113/7830681) Environmental Toxicology and Chemistry 19 (4): 1113–19.
 
 Schubauer-Berigan, Mary K., Marc Smith, Jeff Hopkins, and Susan M. Cormier. 2000. [“Using Historical Biological Data to Evaluate Status and Trends in the Big Darby Creek Watershed (Ohio, USA).”](https://academic.oup.com/etc/article/19/4/1097/7830702) Environmental Toxicology and Chemistry 19 (4): 1097–1105.
+
+Yoder, Chris O., Edward T Rankin, Marc A. Smith, Brian C. Alsdorf, David J. Altfater, Charles E. Boucher, Robert J. Miltner, Dennis E. Mishne, Randall E. Sanders, and Roger F. Thoma. 2005. [Changes in Fish Assemblage Status in Ohio's Nonwadeable Rivers and Streams over Two Decades](https://www.researchgate.net/profile/Roger-Thoma/publication/260158637_Changes_in_fish_assemblage_status_in_Ohio's_nonwadeable_rivers_and_streams_over_two_decades/links/00b4952fdee474a26a000000/Changes-in-fish-assemblage-status-in-Ohios-nonwadeable-rivers-and-streams-over-two-decades.pdf). American Fisheries Society Symposium 45:000-000
+
+Yoder, Chris O., Edward T Rankin, Marc A. Smith, Brian C. Alsdorf, David J. Altfater, Charles E. Boucher, Robert J. Miltner, Dennis E. Mishne, Randall E. Sanders, and Roger F. Thoma. 2019. [Degradation and Recovery of Scioto River (Ohio, USA) Fish Assemblages from Presettlement to Present-Day Conditions](https://fisheries.org/doi/9781934874554-ch10/). American Fisheries Society Symposium 45:000-000
